<resources>
    <string name="app_name">Rick And Morty finish</string>
    <string name="search_field_hint">Filter by name...</string>
    <string name="logo_image">logoImage</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="characterLogo">characterLogo</string>
    <string name="advance_filters">ADVANCED FILTERS</string>
    <string name="character_avatar">Character avatar</string>
    <string name="go_back">GO BACK</string>
    <string name="informations">Informations</string>
    <string name="go_to_episode">go to episode</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="search_by">Search by...</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="type">Type</string>
    <string name="flame">flame</string>
    <string name="male">male</string>
    <string name="genderless">genderless</string>
    <string name="unknown">unknown</string>
    <string name="none">none</string>
    <string name="alive">alive</string>
    <string name="dead">dead</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>